--- a/chat.html
+++ b/chat.html
@@ -1,22 +1,26 @@
 <html>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <script type='text/javascript'>
-  	function initEmbeddedMessaging() {
-  		try {
-  			//embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	</head>
+	<body>
+		<script type='text/javascript'>
+			function initEmbeddedMessaging() {
+				try {
+					//embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
-  			embeddedservice_bootstrap.init(
-  				'00D7Z0000004u9I',
-  				'CyclicaMessagingEmbedded',
-  				'https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802',
-  				{
-  					scrt2URL: 'https://enterprise-speed-2672--pre.sandbox.my.salesforce-scrt.com'
-  				}
-  			);
-  		} catch (err) {
-  			console.error('Error loading Embedded Messaging: ', err);
-  		}
-  	};
-  </script>
-  <script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+					embeddedservice_bootstrap.init(
+						'00D7Z0000004u9I',
+						'CyclicaMessagingEmbedded',
+						'https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802',
+						{
+							scrt2URL: 'https://enterprise-speed-2672--pre.sandbox.my.salesforce-scrt.com'
+						}
+					);
+				} catch (err) {
+					console.error('Error loading Embedded Messaging: ', err);
+				}
+			};
+		</script>
+		<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	</body>
 </html>
