--- a/chat.html
+++ b/chat.html
@@ -1,12 +1,10 @@
 <html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-	</head>
 	<body>
+		Texto de prueba
 		<script type='text/javascript'>
 			function initEmbeddedMessaging() {
 				try {
-					//embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+					embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
 					embeddedservice_bootstrap.init(
 						'00D7Z0000004u9I',
@@ -22,5 +20,6 @@
 			};
 		</script>
 		<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 	</body>
 </html>
