--- a/chat.html
+++ b/chat.html
@@ -4,8 +4,9 @@
 		<script type='text/javascript'>
 			function initEmbeddedMessaging() {
 				try {
+					console.log('hola');
 					embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-
+					console.log('hola1');
 					embeddedservice_bootstrap.init(
 						'00D7Z0000004u9I',
 						'CyclicaMessagingEmbedded',
@@ -14,6 +15,7 @@
 							scrt2URL: 'https://enterprise-speed-2672--pre.sandbox.my.salesforce-scrt.com'
 						}
 					);
+					console.log('hola2');
 				} catch (err) {
 					console.error('Error loading Embedded Messaging: ', err);
 				}
