--- a/chat3.html
+++ b/chat3.html
@@ -1,19 +1,53 @@
-<script type='text/javascript'>
-	function initEmbeddedMessaging() {
-		try {
-			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+<html>
+	<body>
+		Texto de prueba
+		<script type='text/javascript'>
+			function initEmbeddedMessaging() {
+				try {
+					embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
 
-			embeddedservice_bootstrap.init(
-				'00D7Z0000004u9I',
-				'CyclicaMessagingEmbedded',
-				'https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802',
-				{
-					scrt2URL: 'https://enterprise-speed-2672--pre.sandbox.my.salesforce-scrt.com'
+					//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+					//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
+
+					//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
+					//embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
+
+					// Settings for Chat
+					//embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
+						// Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
+						// Returns a valid button ID.
+					//};
+					//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
+					//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
+					//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+
+					embedded_svc.settings.enabledFeatures = ['LiveAgent'];
+					embedded_svc.settings.entryFeature = 'LiveAgent';
+
+					embedded_svc.init(
+						'https://enterprise-speed-2672--pre.sandbox.my.salesforce.com',
+						'https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802vf',
+						gslbBaseURL,
+						'00D7Z0000004u9I',
+						'CyclicaMessagingEmbedded',
+						{
+							baseLiveAgentContentURL: 'https://c.la12s-core1.sfdc-3d0u2f.salesforceliveagent.com/content',
+							deploymentId: '5727Z000000CeoH',
+							buttonId: '5737Z000000CcNe',
+							baseLiveAgentURL: 'https://d.la12s-core1.sfdc-3d0u2f.salesforceliveagent.com/chat',
+							eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IMA0000000tMH2AY_192b9e31005',
+							isOfflineSupportEnabled: false
+						}
+					);
+					console.log('hola2');
+				} catch (err) {
+					console.error('Error loading Embedded Messaging: ', err);
 				}
-			);
-		} catch (err) {
-			console.error('Error loading Embedded Messaging: ', err);
-		}
-	};
-</script>
-<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+			};
+
+
+		</script>
+		<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
+	</body>
+</html>
