--- a/chat3.html
+++ b/chat3.html
@@ -36,7 +36,7 @@
 							buttonId: '5737Z000000CcNe',
 							baseLiveAgentURL: 'https://d.la12s-core1.sfdc-3d0u2f.salesforceliveagent.com/chat',
 							eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04IMA0000000tMH2AY_192b9e31005',
-							isOfflineSupportEnabled: false
+							isOfflineSupportEnabled: true
 						}
 					);
 					console.log('hola2');
