--- a/chat3.html
+++ b/chat3.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		Texto de pruebsa
+		Texto de prueaaaaaaaaaaaabsa
 		<script type='text/javascript'>
 			function initEmbeddedMessaging() {
 				try {
