--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Hello</h1>
+<html>
+	<body>
+        <h1>HOLA</h1>
+		<script type='text/javascript'>
+			function initEmbeddedMessaging() {
+				try {
+					console.log('hola');
+					embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+					console.log('hola1');
+					embeddedservice_bootstrap.init(
+						'00D7Z0000004u9I',
+						'CyclicaMessagingEmbedded',
+						'https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802',
+						{
+							scrt2URL: 'https://enterprise-speed-2672--pre.sandbox.my.salesforce-scrt.com'
+						}
+					);
+					console.log('hola2');
+				} catch (err) {
+					console.error('Error loading Embedded Messaging: ', err);
+				}
+			};
+		</script>
+		<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
+	</body>
+</html>
