--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 	<body>
         <h1>HOLA</h1>
 		<script type='text/javascript'>
+            window.addEventListener("onEmbeddedMessagingReady", () => {
+                console.log("Received the onEmbeddedMessagingReady event…");
+
+                // Send data to Salesforce
+                embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "867-5309"});
+
+                // Remove any items from the previous list that you don't want to send
+                //embeddedservice_bootstrap.prechatAPI.removeHiddenPrechatFields(["BotLanguageInterface"]);
+            });
+
 			function initEmbeddedMessaging() {
 				try {
 					console.log('hola');
@@ -20,6 +30,9 @@
 					console.error('Error loading Embedded Messaging: ', err);
 				}
 			};
+
+
+
 		</script>
 		<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWCyclicaMessagingEmbedd1720903325802/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
