--- a/chat.html
+++ b/chat.html
@@ -7,6 +7,8 @@
 					console.log('hola');
 					embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 					console.log('hola1');
+					embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "ennnn"});
+					console.log(embeddedservice_bootstrap.prechatAPI);
 					embeddedservice_bootstrap.init(
 						'00D7Z0000004u9I',
 						'CyclicaMessagingEmbedded',
