--- a/bot.html
+++ b/bot.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		Ahroa Si
+		Ahroa Si2
 		<script type='text/javascript'>
 			function initEmbeddedMessaging() {
 				try {
@@ -17,7 +17,7 @@
 						}
 					);
 					console.log('hola2');
-                    embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "ennnn"});
+                    //embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "ennnn"});
 				} catch (err) {
 					console.error('Error loading Embedded Messaging: ', err);
 				}
