--- a/bot.html
+++ b/bot.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		Ahroa Si2
+		Ahroa Si22
 		<script type='text/javascript'>
 			function initEmbeddedMessaging() {
 				try {
@@ -17,12 +17,23 @@
 						}
 					);
 					console.log('hola2');
-                    //embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "ennnn"});
 				} catch (err) {
 					console.error('Error loading Embedded Messaging: ', err);
 				}
 			};
 		</script>
+        <script type='text/javascript'>
+			window.addEventListener("onEmbeddedMessagingReady", () => {
+                console.log("Received the onEmbeddedMessagingReady event…");
+
+                // Send data to Salesforce
+                embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "ennnn"});
+
+                // Remove any items from the previous list that you don't want to send
+                //embeddedservice_bootstrap.prechatAPI.removeHiddenPrechatFields(["Customer_ID"]);
+            });
+		</script>
+
 		<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWJorgeTest1729765545960/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
 	</body>
