--- a/bot.html
+++ b/bot.html
@@ -1,27 +1,25 @@
 <html>
 	<body>
-		Ahroa Si22
+		sheë
 		<script type='text/javascript'>
-			function initEmbeddedMessaging() {
-				try {
-					console.log('hola');
-					embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-					console.log('hola1');
-					console.log(embeddedservice_bootstrap.prechatAPI);
-					embeddedservice_bootstrap.init(
-						'00D7Z0000004u9I',
-						'CyclicaMessagingEmbedded',
-						'https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWJorgeTest1729765545960',
-						{
-							scrt2URL: 'https://enterprise-speed-2672--pre.sandbox.my.salesforce-scrt.com'
-						}
-					);
-					console.log('hola2');
-				} catch (err) {
-					console.error('Error loading Embedded Messaging: ', err);
-				}
-			};
-		</script>
+            function initEmbeddedMessaging() {
+                try {
+                    embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+                    console.log('embeddedservice_bootstrap.prechatAPI');
+                    console.log(embeddedservice_bootstrap.prechatAPI);
+                    embeddedservice_bootstrap.init(
+                        '00D7Z0000004u9I',
+                        'GithubTestDeployment2',
+                        'https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWGithubTestDeployment21729782009410',
+                        {
+                            scrt2URL: 'https://enterprise-speed-2672--pre.sandbox.my.salesforce-scrt.com'
+                        }
+                    );
+                } catch (err) {
+                    console.error('Error loading Embedded Messaging: ', err);
+                }
+            };
+        </script>
         <script type='text/javascript'>
 			window.addEventListener("onEmbeddedMessagingReady", () => {
                 console.log("Received the onEmbeddedMessagingReady event…");
@@ -34,7 +32,7 @@
             });
 		</script>
 
-		<script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWJorgeTest1729765545960/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+        <script type='text/javascript' src='https://enterprise-speed-2672--pre.sandbox.my.site.com/ESWGithubTestDeployment21729782009410/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
 	</body>
 </html>
