--- a/bot.html
+++ b/bot.html
@@ -29,6 +29,8 @@
 
                 // Remove any items from the previous list that you don't want to send
                 //embeddedservice_bootstrap.prechatAPI.removeHiddenPrechatFields(["Customer_ID"]);
+                console.log('embeddedservice_bootstrap.prechatAPI2');
+                    console.log(embeddedservice_bootstrap.prechatAPI);
             });
 		</script>
 
