--- a/bot.html
+++ b/bot.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		sheë
+		sheë2
 		<script type='text/javascript'>
             function initEmbeddedMessaging() {
                 try {
