--- a/bot.html
+++ b/bot.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		sheë2a
+		sheë2aas
 		<script type='text/javascript'>
             function initEmbeddedMessaging() {
                 try {
