--- a/bot.html
+++ b/bot.html
@@ -12,7 +12,7 @@
                         console.log("Received the onEmbeddedMessagingReady event…");
 
                         // Send data to Salesforce
-                        embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "ennnn"});
+                        embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "es"});
 
                         // Remove any items from the previous list that you don't want to send
                         //embeddedservice_bootstrap.prechatAPI.removeHiddenPrechatFields(["Customer_ID"]);
