--- a/spanishBot.html
+++ b/spanishBot.html
@@ -38,6 +38,14 @@
                     "First_Name": {
                         "value": "Jane2",
                         "isEditableByEndUser": true
+                    },
+                    "Last_Name": {
+                        "value": "LAAAAAAAAAAAST",
+                        "isEditableByEndUser": false
+                    },
+                    "Company": {
+                        "value": "222222222222222",
+                        "isEditableByEndUser": false
                     }
                 });
                 console.log('embeddedservice_bootstrap.prechatAPI');
