--- a/spanishBot.html
+++ b/spanishBot.html
@@ -37,7 +37,7 @@
                     },
                     "First_Name": {
                         "value": "Jane2",
-                        "isEditableByEndUser": true
+                        "isEditableByEndUser": false
                     },
                     "Last_Name": {
                         "value": "LAAAAAAAAAAAST",
