--- a/enBotProd.html
+++ b/enBotProd.html
@@ -4,8 +4,8 @@
 		<script type='text/javascript'>
             function initEmbeddedMessaging() {
                 try {
-                    embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-
+                    //embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+                    embeddedservice_bootstrap.settings.language = "en";
                     embeddedservice_bootstrap.init(
                         '00D06000001RhcT',
                         'CyclicaMessaging',
