--- a/enBotProd.html
+++ b/enBotProd.html
@@ -19,6 +19,40 @@
                 }
             };
         </script>
+
+        <script type='text/javascript'>
+            window.addEventListener("onEmbeddedMessagingReady", () => {
+                console.log("Received the onEmbeddedMessagingReady event…");
+                // Send data to Salesforce
+                embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({"BotLanguageInterface" : "en"});
+
+                // Remove any items from the previous list that you don't want to send
+                //embeddedservice_bootstrap.prechatAPI.removeHiddenPrechatFields(["Customer_ID"]);
+                console.log('embeddedservice_bootstrap.prechatAPI2');
+                console.log(embeddedservice_bootstrap.prechatAPI);
+
+                embeddedservice_bootstrap.prechatAPI.setVisiblePrechatFields({
+                    "_firstName": {
+                       "value": "Jane",
+                       "isEditableByEndUser": true
+                    },
+                    "First_Name": {
+                        "value": "Jane2aaaaa",
+                        "isEditableByEndUser": false
+                    },
+                    "Last_Name": {
+                        "value": "LAAAAAAAAAAAST",
+                        "isEditableByEndUser": false
+                    },
+                    "Company": {
+                        "value": "222222222222222",
+                        "isEditableByEndUser": false
+                    }
+                });
+                console.log('embeddedservice_bootstrap.prechatAPI');
+                console.log(embeddedservice_bootstrap.prechatAPI);
+            });
+        </script>
         <script type='text/javascript' src='https://enterprise-speed-2672.my.site.com/ESWCyclicaMessaging1734451761296/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 	</body>
 </html>
