--- a/enBotProd.html
+++ b/enBotProd.html
@@ -36,16 +36,20 @@
                        "value": "Jane",
                        "isEditableByEndUser": true
                     },
-                    "First_Name": {
+                    "_lastName": {
                         "value": "Jane2aaaaa",
                         "isEditableByEndUser": false
                     },
-                    "Last_Name": {
-                        "value": "LAAAAAAAAAAAST",
+                    "_email": {
+                        "value": "email@dot.com",
                         "isEditableByEndUser": false
                     },
                     "Company": {
-                        "value": "222222222222222",
+                        "value": "QWERTY",
+                        "isEditableByEndUser": false
+                    },
+                    "Mobile": {
+                        "value": "666666666",
                         "isEditableByEndUser": false
                     }
                 });
