--- a/enBotProd.html
+++ b/enBotProd.html
@@ -28,7 +28,7 @@
                 embeddedservice_bootstrap.prechatAPI.setVisiblePrechatFields({
                     "_firstName": {
                        "value": "Pepito",
-                       "isEditableByEndUser": true //Esta propiedad indica si el usuario final puede editar el campo
+                       "isEditableByEndUser": true //Esta propiedad indica si el usuario podra editar el campo o no
                     },
                     "_lastName": {
                         "value": "Grillo",
