--- a/enBotProd.html
+++ b/enBotProd.html
@@ -4,7 +4,7 @@
             function initEmbeddedMessaging() {
                 try {
                     //Aqui se especifica el lenguaje de la interfaz del bot (Start conversation, End Conversation, etc)
-                    embeddedservice_bootstrap.settings.language = "en";
+                    embeddedservice_bootstrap.settings.language = "es";
                     embeddedservice_bootstrap.init(
                         '00D06000001RhcT',
                         'CyclicaMessaging',
